--- a/react-assignment/react-project/src/App.css
+++ b/react-assignment/react-project/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+
+.completed{
+  text-decoration: line-through;
+  /* color: #eee */
+}
+
+li button {
+  margin-top: -7px;
+}
